--- a/client/src/semantics/header-style.css
+++ b/client/src/semantics/header-style.css
@@ -62,9 +62,14 @@
   width: 30%;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
+  .header-container {
+    height: auto;
+  }
   .header-container .header-left-cont {
-    justify-content: flex-start;
+    justify-content: center;
+    margin-right: 20px;
+    padding: 10px;
   }
   .header-container .header-mid-cont {
     width: 100%;
